# age-plugin-se

./: .gitignore  .gitmodules  Cargo.toml  Package.resolved  Package.swift  README.md  default.nix  flake.nix
Scripts/alpine/: chroot-build.sh
nix/: dev-shell.nix  flake-compat.nix  flake-module.nix  pre-commit.nix  rust-platform.nix
nix/dev/: flake-module.nix  flake.nix  pre-commit.nix  shell.nix
nix/package/: default.nix  macos-remove-swift-crypto.patch
nix/package/swiftpm2nix/: default.nix  workspace-state.json
src/: cli.rs  crypto.rs  main.rs  plugin.rs
